--- a/index.html
+++ b/index.html
@@ -5,15 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="homePageStyling.css">
+    <link rel="stylesheet" href="projectsStyling.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap" rel="stylesheet">
     <script src="model.js" defer></script>
     <script src="homePageView.js" defer></script>
-    <script src="homePageController.js" defer></script>
-    <title>Document</title>
+    <script src="aboutPageView.js" defer></script>
+    <script src="projectsPageView.js" defer></script>
+    <script src="contactPageView.js" defer></script>
+    <script src="controller.js" defer></script>
+    <title>Velkommen!</title>
 </head>
 <body>
     <div id="app"></div>
+    <script>
+        updateView();
+
+        function updateView(){
+            if (model.app.page == 'homepage') updateHomePageView();
+            if (model.app.page == 'about') updateAboutPageView();
+            if (model.app.page == 'projects') updateProjectsPageView();
+            if (model.app.page == 'contact') updateContactPageView();
+        }
+    </script>
 </body>
 </html>
